--- a/web/src/components/PageHeader/styles.css
+++ b/web/src/components/PageHeader/styles.css
@@ -14,7 +14,6 @@
     padding: 1.6rem 0;
 }
 
-
 .page-header .top-bar-container  a{
     height: 3.2rem;
     transition: opacity 0.2s;
@@ -39,6 +38,14 @@
     font: 700 3.6rem Archivo;
     line-height: 4.2rem;
     color: var(--color-title-in-primary);
+}
+
+.page-header .header-content p{
+    max-height: 30rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    color: var(--color-text-in-primary);
+    margin-top: 2.4rem;
 }
 
 @media (min-width: 700px){
